<resources>
    <string name="app_name">MyBands</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_a_picture_for_your_profile">Select a picture for your profile</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="deleted_image_succesfully">Deleted image successfully</string>
    <string name="deleted_image_failed">Deleted image failed</string>
    <string name="finished">Finished</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="or_click_here_to_login">Or click here to login</string>
    <string name="registering_please_wait">Registering, please wait...</string>
    <string name="error_registering_user">Error registering user</string>
    <string name="you_have_an_error">You have an error</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="forgot">Forgot password?</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="please_login">Please login</string>
    <string name="prompt_password">Enter your password</string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="error_occurred">Error occurred</string>
    <string name="sign_up_now">Do not have an account? Sign Up Now</string>
    <string name="already_registered">Already registered?</string>
    <string name="please_enter_a_valid_email">Please enter e valid email</string>
    <string name="minimum_length_of_password_should_be_6">Minimum length of password should be 6</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="musician_added">Musician added</string>
    <string name="profile_updated">profile_updated</string>
    <string name="verified">Verified</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified (Click to verify)</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="instruments">Instruments</string>
    <string name="playlists">Playlists</string>
    <string name="rehearsals">Rehearsals</string>
    <string name="concerts">Concerts</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate and Settings</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="gretel_hilbing">Usuario</string>
    <string name="passwords_are_not_equal">Passwords are not equal</string>
    <string name="facebook_app_id">165384551360310</string>
    <string name="fb_login_protocol_scheme">fb165384551360310</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="bands">Bands</string>
    <string name="please_select_instrument_you_play">Please, select the instrument/s you play</string>
    <string name="select_your_experience">Select your experience</string>
    <string name="add_instrument">Add instrument</string>
    <string name="update">Update</string>
    <string name="updating_instruments">Updating instruments</string>
    <string name="please_upload_an_image">Please upload an image</string>
    <string name="instrument_updated_successfully">Instrument updated successfully</string>
    <string name="old_values">Actual values</string>
    <string name="new_values">New Values</string>
    <string name="updating">Updating...</string>
    <string name="delete">Delete</string>
    <string name="instrument_deleted">Instrument deleted</string>
    <string name="enter_a_name_for_your_band">Enter a name for your band</string>
    <string name="search_musician">Search musician</string>
    <string name="create_band">Create Band</string>
    <string name="add_musician">Add musician</string>
    <string name="invite_musician">Invite musician</string>
    <string name="account_created_succesfully">Account created successfully</string>
    <string name="you_are_authenticated_succesfully">You are authenticated successfully</string>
    <string name="spotify_client_id">8a3367eb003649048f31515144e208b5</string>
    <string name="add_song">Add song</string>
    <string name="songs">Songs</string>
    <string name="adding_musicians_to_band">Adding musicians to band</string>
    <string name="search">Search...</string>
    <string name="select_musician">Select musician...</string>
    <string name="you_need_to_add_playlists">You need to add playlists</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="youtube_api_key">AIzaSyAblCydvFwrbq-w7XnBLxuNoSkr0jU8FaU</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="select_a_song" />
    <string name="enter_name_of_the_song">Enter name of the song</string>
    <string name="enter_name_of_the_artist_or_band">Enter name of the artist or band</string>
    <string name="enter_duration">Enter duration</string>
    <string name="copy_youtube_link">Copy youtube link</string>
    <string name="song_added">Song added</string>
    <string name="updating_song">Updating song</string>
    <string name="song_deleted">Song deleted</string>
    <string name="song_added_successfully">Song added successfully</string>
    <string name="no_data_available">No data available</string>
    <string name="updating_musicans_bands">Updating musicians from band...</string>
    <string name="musician_updated_successfully">Musician updated successfully</string>
    <string name="musician_already_exists">Musician already exists</string>
    <string name="home">Home</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_your_password">Confirm your password</string>
    <string name="or_login_with">or Login with:</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="save">Save</string>
    <string name="creating_account">Creating Account</string>
    <string name="please_wait_while_we_are_creating_your_new_account">Please wait, while we are creating your new account...</string>
    <string name="please_wait_while_we_are_loggin_you">Please wait, while we are loggin you</string>
    <string name="please_wait_while_we_are_allowing_you_into_your_account">Please wait, while we are allowing you into your account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="your_user_account_is_created_succesfully">Your user account is created successfully</string>
    <string name="creating_user">Creating User</string>
    <string name="profile_image_stored_successfully">Profile image stored successfully</string>
    <string name="image_stored_in_database_successfully">Image stored in database successfully</string>
    <string name="error_occurred_image_cannot_be_cropped_please_try_again">Error occurred: Image cannot be cropped, please, try again</string>
    <string name="profile_image">Profile Image</string>
    <string name="please_wait_while_we_are_updating_your_profile_image">Please wait, while we are updating your profile image</string>
    <string name="profile_name_does_not_exist">Profile name does not exist</string>
    <string name="please_select_profile_image_first">Please, select profile image first</string>
    <string name="update_instrument">Update instrument</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="are_you_a_singer">Are you a singer?</string>
    <string name="are_you_a_composer">Are you a composer?</string>
    <string name="singer_database_updated">Singer Database updated successfully</string>
    <string name="singer_deleted_from_singers">Singer deleted from singers</string>
    <string name="user_name_error">User name error</string>
    <string name="instrument_added_successfully">Instrument added successfully</string>
    <string name="please_wait_while_we_are_updating_your_instruments">Please wait, while we are updating your instruments</string>
    <string name="connection_to_google_sign_in_failed">Connection to Google Sign In Failed</string>
    <string name="please_wait_while_we_are_getting_your_google_auth_result">Please wait, while we are getting your Google Auth Result</string>
    <string name="cannot_get_google_auth_result">Cannot get Google Auth Result</string>
    <string name="not_authenticated">Not authenticated. Try again.</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="please_wait_while_we_are_allowing_you_to_login_to_your_google_account">Please wait, while we are allowing you to login using your Google Account...</string>
    <string name="available">Available</string>
    <string name="no_available">Not available</string>
    <string name="singer">Singer</string>
    <string name="composer">Composer</string>
    <string name="account_settings">Account Settings</string>
    <string name="please_enter_your_full_name">Please, enter your full name</string>
    <string name="please_enter_your_phone">Please, enter your phone</string>
    <string name="please_enter_the_country_where_you_live">Please, enter the country where you live</string>
    <string name="please_enter_your_status">Please, enter your status</string>
    <string name="account_settings_updated_successfully">Account settings updated successfully</string>
    <string name="enter_band_name">Enter band\'s name</string>
    <string name="enter_band_story">Enter band\'s story</string>
    <string name="where_is_the_band_located">Where is the band located?</string>
    <string name="find_musicians">Find musicians</string>
    <string name="creating_band">Creating band</string>
    <string name="please_wait_while_we_are_creating_your_band">Please wait, while we are creating your band</string>
    <string name="your_band_is_created_succesfully">Your band is created successfully</string>
    <string name="enter_your_band_name">Enter your band name</string>
    <string name="enter_your_band_story">Enter your band story</string>
    <string name="please_select_band_image_first">Please, select band image first</string>
    <string name="musicians">Musicians</string>
    <string name="youtube_link">Youtube link</string>
    <string name="search_song_youtube">Search song into Youtube</string>
    <string name="phone_number">Phone number</string>
    <string name="status">status</string>
    <string name="textview">TextView</string>
    <string name="user_id">User Id</string>
    <string name="user_name">User Name</string>
    <string name="youtube_title">Youtube title</string>
    <string name="update_song">Update Song</string>
    <string name="create_event">Create event</string>
    <string name="enter_event_date">Enter event\'s date</string>
    <string name="enter_event_time">Enter event time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="enter_a_date">Enter a date</string>
    <string name="enter_a_place">Enter the address</string>
    <string name="enter_a_name_for_your_event">Enter a name for your event</string>
    <string name="select_playlist">Select playlist</string>
    <string name="event_type">Event type</string>
</resources>