<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/all_events_type_TV"
        android:layout_width="match_parent"
        android:text="@string/event_type"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/all_events_name_TV"
        android:layout_width="match_parent"
        android:text="@string/enter_a_name_for_your_event"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/all_events_place_TV"
        android:layout_width="match_parent"
        android:text="@string/enter_a_place"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/all_events_date_TV"
            android:layout_width="0dp"
            android:text="@string/enter_a_date"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/all_events_time_TV"
            android:layout_width="0dp"
            android:text="@string/enter_event_time"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/all_events_playlist_TV"
        android:layout_width="match_parent"
        android:text="@string/playlists"
        android:layout_height="wrap_content"/>


</LinearLayout>