<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_margin="4dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/instrument_item_TV"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:padding="3dp"
        android:background="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/instrument_userIdTV"
        android:text="@string/user_id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/instrument_userNameTV"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/user_name"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>