<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".SongActivity">

    <include
        android:id="@+id/update_song_toolbar"
        layout="@layout/app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_song_toolbar">


        <EditText
            android:id="@+id/update_song_song_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:background="@drawable/inputs"
            android:ems="10"
            android:hint="@string/enter_name_of_the_song"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/update_song_artist_band_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs"
            android:layout_margin="10dp"
            android:layout_below="@+id/update_song_song_name_ET"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_name_of_the_artist_or_band"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/update_song_youtube_title_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputs"
            android:layout_margin="10dp"
            android:layout_below="@+id/update_song_youtube_link_ET"
            android:ems="10"
            android:hint="@string/youtube_title"
            android:importantForAutofill="no"
            android:inputType="textImeMultiLine" />

        <Button
            android:id="@+id/update_song_search_song_youtube_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:layout_margin="10dp"
            android:text="@string/search_song_youtube"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/update_song_artist_band_ET"/>

        <EditText
            android:id="@+id/update_song_youtube_link_ET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:visibility="invisible"
            android:enabled="false"
            android:hint="@string/youtube_link"
            android:inputType="textPersonName"
            android:layout_below="@id/update_song_search_song_youtube_BT"/>

        <Button
            android:id="@+id/update_song_add_song_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/update_song_youtube_title_ET"
            android:background="@drawable/buttons"
            android:text="@string/update_song"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>